<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnDisplayImageActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnGoToRolodex"
        android:onClick="onClick"
        android:text="@string/btnDisplayImageActivity"
        />

    <Button
        android:id="@+id/btnGoToRolodex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/btnGoToEMICalculator"
        app:layout_constraintTop_toBottomOf="@id/btnDisplayImageActivity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/btnGoToRolodex"
        android:onClick="onClick"
        />

    <Button
        android:id="@+id/btnGoToEMICalculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnGoToRolodex"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="onClick"
        android:text="@string/btnGoToEMICalculator"
        />
</androidx.constraintlayout.widget.ConstraintLayout>