<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EMICalculator">

    <TextView
        android:id="@+id/tvLoanAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvLoanAmount"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvInterestRate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:id="@+id/tvLoanAmountValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintTop_toBottomOf="@id/tvLoanAmount"
        app:layout_constraintBottom_toTopOf="@id/sbLoanAmount"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <SeekBar
        android:id="@+id/sbLoanAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:min="5000"
        android:max="500000"
        android:progress="200000"
        app:layout_constraintTop_toBottomOf="@id/tvLoanAmountValue"
        app:layout_constraintBottom_toTopOf="@id/tvInterestRate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/tvInterestRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvInterestRate"
        app:layout_constraintTop_toBottomOf="@id/sbLoanAmount"
        app:layout_constraintBottom_toTopOf="@id/tvInterestRateValue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        />
    <TextView
        android:id="@+id/tvInterestRateValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintTop_toBottomOf="@id/tvInterestRateValue"
        app:layout_constraintBottom_toTopOf="@id/sbInterestRate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <SeekBar
        android:id="@+id/sbInterestRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:min="5.0"
        android:max="15.0"
        android:progress="10.5"
        app:layout_constraintTop_toBottomOf="@id/tvInterestRateValue"
        app:layout_constraintBottom_toTopOf="@id/tvLoanTerm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:id="@+id/tvLoanTerm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvLoanTerm"
        app:layout_constraintTop_toBottomOf="@id/sbInterestRate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvLoanTermValue"
        />
    <TextView
        android:id="@+id/tvLoanTermValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintTop_toBottomOf="@id/tvLoanTerm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sbLoanTerm"
        />
    <SeekBar
        android:id="@+id/sbLoanTerm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:min="1"
        android:max="30"
        android:progress="5"
        app:layout_constraintTop_toBottomOf="@id/tvLoanTermValue"
        app:layout_constraintBottom_toTopOf="@id/tvEMI"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:id="@+id/tvEMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="EMI"
        app:layout_constraintTop_toBottomOf="@id/sbLoanTerm"
        app:layout_constraintBottom_toTopOf="@id/tvEMIValue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:id="@+id/tvEMIValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvEMI"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>